--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python-dotenv = "^0.20.0"
 requests = "^2.28.0"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
